working with ehbl

--- a/src/components/battle/battle.scss
+++ b/src/components/battle/battle.scss
@@ -12,6 +12,8 @@
 @import "~@ionic/core/css/flex-utils.css";
 @import "~@ionic/core/css/display.css";
 
+@import "../../style/theme.scss";
+
 :host {
   ion-list {
     display: none;
