--- a/src/components/pilot/pilot.scss
+++ b/src/components/pilot/pilot.scss
@@ -8,10 +8,17 @@ div.wrapper {
   height: 100px;
   box-shadow: 2px 2px 25px 1px rgba(0, 0, 0, 0.8);
 
-  background: linear-gradient(180deg, $topBar 0%, $topBar 30%, $botBar 40%, $botBar 100%);
+  background: linear-gradient(
+    180deg,
+    $topBar 0%,
+    $topBar 30%,
+    $botBar 40%,
+    $botBar 100%
+  );
 
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   div.left {
     flex: 1;
     display: flex;
@@ -96,6 +103,12 @@ div.wrapper {
     p.id {
       display: none;
     }
+  }
+}
+
+:host(.unlabelled) {
+  .subtitle {
+    display: none;
   }
 }
 
